Changing h1 from 2022 to 2024 in the countdown project

--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-        <h1>2022 NEW YEAR COUNTDOWN</h1>
+        <h1>2024 NEW YEAR COUNTDOWN</h1>
        
         <div class="timer-container">
             <div class="days-container">
